--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
 
     <!--Scripts -->
-    <script src="js/index.js"></script>
+    <script src="main.js"></script>
 
 </head>
 <body>
+    <div id="app">
 
+    </div>
 </body>
 </html>
