--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
     <title>E-Commerce Application</title>
     <meta charset="utf-8">
 
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="main.css">
+
     <!--Scripts -->
     <script src="main.js"></script>
 
