--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="main.css">
 
     <!--Scripts -->
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
 
 </head>
 <body>
