--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/main.css">
 
     <!--Scripts -->
-    <script src="main.js" defer></script>
+    <script src="/main.js" defer></script>
 
 </head>
 <body>
     <div id="app">
-
+        
     </div>
 </body>
 </html>
